feat: adicionado sumários XML, recriado base de dados/migrations e implementado interfaces para os serviços.

--- a/Omnibees.BeeBilling.Application/Omnibees.BeeBilling.Application.csproj
+++ b/Omnibees.BeeBilling.Application/Omnibees.BeeBilling.Application.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Omnibees.BeeBilling.Infrastructure\Omnibees.BeeBilling.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
