--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,17 +16,24 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
+
       - name: Restore dependencies
         run: dotnet restore
+
       - name: Build
         run: dotnet build --no-restore --configuration Release
-      - name: Test
-        run: dotnet test --no-build --configuration Release --logger "trx;LogFileName=test-results.trx" --results-directory ./reports/
-      - name: Publish test results
+
+      - name: Executar testes
+        run: |
+          mkdir -p ./reports/
+          dotnet test --no-build --configuration Release --logger "trx;LogFileName=test-results.trx" --results-directory ./reports/
+
+      - name: Publicar resultados dos testes
         uses: dorny/test-reporter@v1
         if: always()
         with:
